; ModuleID = '/home/carl/AnghaBench/linux/sound/sh/extr_sh_dac_audio.c_dac_audio_reset.c'
source_filename = "/home/carl/AnghaBench/linux/sound/sh/extr_sh_dac_audio.c_dac_audio_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_sh_dac = type { i32, i64, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_sh_dac*)* @dac_audio_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dac_audio_reset(%struct.snd_sh_dac* %0) #0 {
  %2 = alloca %struct.snd_sh_dac*, align 8
  store %struct.snd_sh_dac* %0, %struct.snd_sh_dac** %2, align 8
  %3 = load %struct.snd_sh_dac*, %struct.snd_sh_dac** %2, align 8
  %4 = call i32 @dac_audio_stop_timer(%struct.snd_sh_dac* %3)
  %5 = load %struct.snd_sh_dac*, %struct.snd_sh_dac** %2, align 8
  %6 = getelementptr inbounds %struct.snd_sh_dac, %struct.snd_sh_dac* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.snd_sh_dac*, %struct.snd_sh_dac** %2, align 8
  %9 = getelementptr inbounds %struct.snd_sh_dac, %struct.snd_sh_dac* %8, i32 0, i32 3
  store i32 %7, i32* %9, align 4
  %10 = load %struct.snd_sh_dac*, %struct.snd_sh_dac** %2, align 8
  %11 = getelementptr inbounds %struct.snd_sh_dac, %struct.snd_sh_dac* %10, i32 0, i32 4
  store i32 %7, i32* %11, align 8
  %12 = load %struct.snd_sh_dac*, %struct.snd_sh_dac** %2, align 8
  %13 = getelementptr inbounds %struct.snd_sh_dac, %struct.snd_sh_dac* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.snd_sh_dac*, %struct.snd_sh_dac** %2, align 8
  %15 = getelementptr inbounds %struct.snd_sh_dac, %struct.snd_sh_dac* %14, i32 0, i32 0
  store i32 1, i32* %15, align 8
  ret void
}

declare dso_local i32 @dac_audio_stop_timer(%struct.snd_sh_dac*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
